styles/profile.css
html,
body {
    margin: 0px;
    padding: 0px
}

#app {
    height: 100%;
}

#timeDiv {
    display: inline-block;
    position: relative;
    left: -46%;
}

#profile {
    display: block;
    position: absolute;
    left: 20%;
    top: 23%;
    width: 75%;
    height: 100%;
    /* margin-left: 220px; */
    margin-top: 2%;
}

#profilePictureDiv {
    display: inline-block;
}

#profileTextDiv {
    display: inline-block;
    padding: 10px;
}

#achievementDiv {
    display: block;
}

#profilePicture {
    margin: 15px;
    display: block;
    width: 275px;
    height: 200px;
}

#userNameText {
    display: inline-block;
    font-size: 40px;
    color: white;
    text-shadow: lightgray;
}

#profileNumberText {
    display: block;
    font-size: 20px;
    color: lightgray;
}

#headerPhotoBox {
    position: absolute;
    width: 100%;
    height: 240px;
    text-align: center;
    z-index: -999;
}

#headerPhoto {
    width: 100%;
    height: 240px;
    object-fit: cover;
    text-align: center;
    vertical-align: middle;
}

#achievementTitle {
    text-align: center;
    display: block;
    font-size: 40px;
    width: 100%;
    height: 100px;
    background-color: darkgray;
}

#workoutBox {
    text-align: center;
    display: inline-block;
    font-size: 40px;
    width: 100%;
    height: 100px;
    background-color: darkgray;
}

.achievementFlexContainer {
    height: 550px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    overflow-x: auto;
}

.achievementBox {
    width: 400px;
    height: 450px;
    display: inline-block;
    position: relative;
    text-align: center;
    background-color: lightgray;
    margin: 10px;
}

.achievementImage {
    text-align: center;
    width: 300px;
    height: 300px;
    object-fit: cover;
}

.achievementText {
    font-size: 24px;
    top: -50%;
}

body {
    font-family: 'Tienne';
    color: #1B2021;
    position: relative;
}

#topBar {
    height: 148px;
    background-color: #0075A2;
    width: 100%;
    color: #00FFC5;
    font-size: 64px;
    display: table;
    font-family: 'Tharlon';
    text-shadow: 1px 2px #05B28B;
    z-index: 3;
}

#topBarText {
    vertical-align: middle;
    display: table-cell;
}

#sideBar {
    width: 202px;
    height: 650px;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    background-color: #00FFC5;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    z-index: 2;
}

.sideBarButtons {
    height: 80px;
    width: 202px;
    background-color: #06DEAD;
    font-size: 24px;
    font-family: 'Tienne';
    border-width: 0px;
    text-align: left;
}

#barChartBackground {
    width: 700px;
    height: 400px;
    position: absolute;
    left: 25%;
    top: 120%;
    z-index: -1;
    background-color: #00FFC5;
    ;
    border: 2px solid #06DEAD;
    ;
}

#leaderboardChart {
    position: absolute;
    left: 30%;
    top: 140%;
    width: 600px !important;
    height: 350px !important;
    z-index: 1;
}

#enterExerciseButton {
    position: absolute;
    left: 37%;
    top: 410%;
    width: 400px;
    height: 100px;
    background-color: #F21B3F;
    font-family: 'Tienne';
    border-width: 3px;
    border-color: #C81231;
    font-size: 24px;
}

#timeDropBtn {
    background-color: #06DEAD;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
    
}

#timeDropdown {
    position: relative;
    display: inline-block;
}

#timeDropdownContent {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

#timeDropdownContent a {
    font-size: 16px;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

#timeDropdownContent a:hover {
    background-color: #f1f1f1
}

#timeDropdown:hover #timeDropdownContent {
    display: block;
}

#timeDropdown:hover #timeDropBtn {
    background-color: #008d6c;
}

.workoutBox {
    width: 400px;
    height: auto;
    display: inline-block;
    position: relative;
    text-align: center;
    background-color: lightgray;
    margin: 10px;
}

.workoutDate {
    background-color: lightblue;
    font-size: 36px;
}

.workoutName {
    font-style: oblique;
    font-size: 30px;
}

.workoutSets {
    font-size: 28px;
}

.workoutReps {
    font-size: 28px;
}

.workoutFlexContainer {
    height: 350px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    overflow-x: auto;
}

